ci: move bit cli version to env var

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
+      BIT_VERSION: ${{ secrets.BIT_VERSION }}
     steps:
       - id: token
         name: Token
@@ -28,11 +29,13 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install Bit Version Manager
+      - name: Install Bit CLI
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           npm i -g @teambit/bvm
-          bvm install 0.0.867
+          bvm install ${BIT_VERSION}
+        env:
+          BIT_VERSION: ${{ secrets.BIT_VERSION }}
 
       - name: Add bvm bin folder to path
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
