--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -46,6 +46,14 @@
       }
     },
     "overrides": {
+      "styled-components": "^5",
+      "node-forge": "^1.3.1",
+      "glob-parent": "^5.1.2",
+      "trim": "^0.0.3",
+      "trim-newlines": "^3.0.1",
+      "braces": "^2.3.2",
+      "react": "<18.0.0",
+      "react-dom": "<18.0.0",
       "@types/react": "^17.0.2",
       "@types/react-dom": "^17.0.2"
     },
