ci: add "skip-ci" flag to auto-commit message
Add "skip-ci" flag to bit workflow auto-commit message

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -95,7 +95,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           git add .
-          git commit -m "release: Bit GitHub Action"
+          git commit -m "release: Bit GitHub Action (automated) [skip-ci]"
           git push
         shell: bash
         env:
