--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -9,6 +9,9 @@ jobs:
   require_approval:
     name: Require Approval
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     if: |
       startsWith(github.event.pull_request.head.ref, 'feature/') || 
       startsWith(github.event.pull_request.head.ref, 'fix/') || 
