--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-table": "^8.5.30",
     "@types/react-table": "^7.7.12",
+    "jest-environment-jsdom": "^29.3.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
@@ -79,7 +80,6 @@
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-webpack-plugin": "^3.2.0",
     "eslint-plugin-functional": "*",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
@@ -89,6 +89,7 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
