feat(DSM-285): table (#442)
* feat(DSM-285): basic table and pagination test

* feat(DSM-285): basic table version

* feat(DSM-285): fixed unit tests

* feat(DSM-285): minor changes

* feat(DSM-285): removed TypographyProvider

* feat(DSM-285): added sort icon

* feat(DSM-285): row selection, dnd,

* feat(DSM-285): empty table

* fixed width column for dragging row

* feat(DSM-285): storybook updates

* feat(DSM-285): setting initial page to 0

* feat(DSM-285): table alignment

* feat(DSM-285): mobile layout and DnD pages issue

Co-authored-by: Martim Matos <martim.developer@hotmail.com>

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -105,7 +105,9 @@
         "policy": {
           "dependencies": {
             "@tanstack/react-table": "^8.5.13",
-            "@types/react-table": "^7.7.12"
+            "@types/react-table": "^7.7.12",
+            "@types/react-beautiful-dnd": "^13.1.2",
+            "react-beautiful-dnd": "^13.1.1"
           }
         }
       }
