--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -45,6 +45,7 @@
         "react-dom": "^17.0.2"
       }
     },
+    "linkCoreAspects": true,
     "overrides": {
       "styled-components": "^5",
       "node-forge": "^1.3.1",
