--- a/package.json
+++ b/package.json
@@ -36,79 +36,80 @@
     "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "@tanstack/react-table": "^8.5.13",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-table": "^7.7.12",
+    "@popperjs/core": "^2.11.6",
+    "@tanstack/react-table": "^8.7.4",
+    "react-datepicker": "^4.8.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-popper": "^2.3.0"
+    "react-popper": "^2.3.0",
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@carlsberg/eslint-config-carlsberg": "^0.1.0",
-    "@storybook/addon-actions": "^6.5.8",
-    "@storybook/addon-docs": "^6.5.8",
-    "@storybook/addon-essentials": "^6.5.8",
-    "@storybook/addon-links": "^6.5.8",
-    "@storybook/addons": "^6.5.8",
-    "@storybook/builder-webpack5": "^6.5.8",
-    "@storybook/manager-webpack5": "^6.5.8",
-    "@storybook/react": "^6.5.8",
-    "@storybook/theming": "^6.5.8",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "@types/babel__core": "^7.1.14",
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.2",
-    "@types/react-datepicker": "^4.3.4",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.9",
-    "@types/testing-library__jest-dom": "^5.14.3",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@carlsberg/eslint-config-carlsberg": "^0.2.0",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/addons": "^6.5.14",
+    "@storybook/builder-webpack5": "^6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/react": "^6.5.14",
+    "@storybook/theming": "^6.5.14",
+    "jest-environment-jsdom": "^29.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/babel__core": "^7.1.20",
+    "@types/jest": "^29.2.4",
+    "@types/react-beautiful-dnd": "^13.1.3",
+    "@types/react-table": "^7.7.12",
+    "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^17.0.18",
+    "@types/react-test-renderer": "^17.0.2",
+    "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.0",
     "babel-plugin-transform-hoist-jsx-style": "^1.0.0",
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-loader": "^4.0.2",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-functional": "*",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.7",
     "eslint-plugin-jsdoc": "*",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.6.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-organize-imports": "^1.1.1",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-organize-imports": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.2",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.4.4",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.9.4",
     "url-loader": "^4.1.1",
-    "uuid": "^8.3.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "uuid": "^9.0.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "workspaces": [
     "malty/*"
