--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "trim": "^0.0.3",
     "trim-newlines": "^3.0.1",
     "braces": "^2.3.2",
+    "json5": "^2.2.2",
     "react": "<18.0.0",
     "react-dom": "<18.0.0",
     "@types/react": "<18.0.0",
