--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@carlsberg/eslint-config-carlsberg": "^0.2.1",
+    "@carlsberg/prettier-config": "^0.0.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-docs": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
