--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@carlsberg/eslint-config-carlsberg": "^0.2.1",
+    "@carlsberg/eslint-config-carlsberg": "^0.2.2",
+    "@carlsberg/prettier-config": "^0.0.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-docs": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
@@ -136,5 +137,6 @@
         "@": "malty"
       }
     }
-  }
+  },
+  "prettier": "@carlsberg/prettier-config"
 }
