--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "eslint-plugin-functional": "*",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsdoc": "*",
+    "eslint-plugin-jsdoc": "^39.7.4",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
