--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["@carlsberg/eslint-config-carlsberg"],
   "rules": {
     "import/no-extraneous-dependencies": "off",
-    "@typescript-eslint/no-unused-vars-experimental": "off"
+    "@typescript-eslint/no-unused-vars-experimental": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "overrides": [
     {
