--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@styled-system/prop-types": "^5.1.5",
     "@tanstack/react-table": "^8.7.6",
-    "react-datepicker": "^4.8.0",
+    "@types/styled-system": "^5.1.16",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.3.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -60,7 +63,6 @@
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@storybook/theming": "^6.5.15",
-    "jest-environment-jsdom": "^29.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -71,6 +73,7 @@
     "@types/react": "^18.0.28",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^17.0.18",
+
     "@types/react-test-renderer": "^17.0.2",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
