--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -2,7 +2,9 @@ name: Bit Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [feat/changelog-poc-3]
+  pull_request:
+    branches: [feat/changelog-poc-3]
 
 jobs:
   deploy:
@@ -20,17 +22,17 @@ jobs:
           private_key: '${{ secrets.CX_RELEASE_APP_PRIVATE_KEY }}'
 
       - uses: actions/checkout@v3
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         with:
           token: ${{ steps.token.outputs.token }}
 
       - uses: actions/setup-node@v3
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         with:
           node-version: '16'
 
       - name: Install Bit CLI
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           npm i -g @teambit/bvm
           bvm install ${BIT_VERSION}
@@ -38,13 +40,13 @@ jobs:
           BIT_VERSION: ${{ secrets.BIT_VERSION }}
 
       - name: Add bvm bin folder to path
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           echo "$HOME/bin" >> $GITHUB_PATH
           echo "PATH=$HOME/bin:$PATH" >> $GITHUB_ENV
 
       - name: Set up bit config
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           echo "Adding bit.dev to npm registry"
           export PATH=${{ env.PATH }}
@@ -59,7 +61,7 @@ jobs:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
       - name: Bit Deps Install & Compile
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           export PATH=${{ env.PATH }}
           yarn cache clean --force
@@ -69,14 +71,14 @@ jobs:
         shell: bash
 
       - name: Bit Tag Components
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           export PATH=${{ env.PATH }}
           bit tag
         shell: bash
 
       - name: Export components
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           export PATH=${{ env.PATH }}
           bit export
@@ -92,7 +94,7 @@ jobs:
           CX_RELEASE_APP_USER_EMAIL: ${{ secrets.CX_RELEASE_APP_USER_EMAIL }}
 
       - name: Create Pull Request
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
         run: |
           git add .
           git commit -m "release: Bit GitHub Action (automated) [skip ci]"
