--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -70,12 +70,21 @@ jobs:
           bit compile
         shell: bash
 
-      - name: Bit Tag Components
-        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
+      - name: Check Tags
         run: |
-          export PATH=${{ env.PATH }}
-          bit tag
-        shell: bash
+          uncommitted_components=$(bit status -s | grep "modified" | grep -v "tagged" | awk '{print $2}')
+          if [ -n "$uncommitted_components" ]; then
+            echo "Error: the following components have been modified but not tagged:"
+            echo "$uncommitted_components"
+            exit 1
+          fi
+
+      # - name: Bit Tag Components
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
+      #   run: |
+      #     export PATH=${{ env.PATH }}
+      #     bit tag
+      #   shell: bash
 
       - name: Export components
         if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
