--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "jest",
     "test:ci": "jest --silent --ci",
     "test:watch": "jest --watch",
-    "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
+    "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\"",
+    "check-tags": "./check-tags.sh"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
