Create check-tags js file

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -71,13 +71,7 @@ jobs:
         shell: bash
 
       - name: Check Tags
-        run: |
-          uncommitted_components=$(bit status -s | grep "modified" | grep -v "tagged" | awk '{print $2}')
-          if [ -n "$uncommitted_components" ]; then
-            echo "Error: the following components have been modified but not tagged:"
-            echo "$uncommitted_components"
-            exit 1
-          fi
+        run: node check-tag.js
 
       # - name: Bit Tag Components
       #   if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
