--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test:ci": "jest --silent --ci",
     "test:watch": "jest --watch",
     "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\"",
-    "check-tags": "./check-tags.sh"
+    "check-tags": "node ./check-tags.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
