--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -71,7 +71,7 @@ jobs:
       #   shell: bash
 
       - name: Check Tags
-        run: node check-tag.js
+        run: node scripts/check-tags.js
 
       # - name: Bit Tag Components
       #   if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
