--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -71,7 +71,9 @@ jobs:
       #   shell: bash
 
       - name: Check Tags
-        run: node scripts/check-tags.js
+        run: |
+        node scripts/check-tags.js
+        bit status -j
 
       # - name: Bit Tag Components
       #   if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
