--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -60,15 +60,15 @@ jobs:
         env:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
-      # - name: Bit Deps Install & Compile
-      #   if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
-      #   run: |
-      #     export PATH=${{ env.PATH }}
-      #     yarn cache clean --force
-      #     bit clear-cache
-      #     bit install
-      #     bit compile
-      #   shell: bash
+      - name: Bit Deps Install & Compile
+        if: github.event_name == 'push' && github.ref == 'refs/heads/feat/changelog-poc-3'
+        run: |
+          export PATH=${{ env.PATH }}
+          yarn cache clean --force
+          bit clear-cache
+          bit install
+          bit compile
+        shell: bash
 
       - name: Check Tags
         run: |
