--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -62,7 +62,8 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           export PATH=${{ env.PATH }}
-          bit import
+          yarn cache clean --force
+          bit clear-cache
           bit install
           bit compile
         shell: bash
