--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-table": "^8.7.6",
-    "react-datepicker": "^4.8.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
-    "react-popper": "^2.3.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "react-popper": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -60,17 +61,16 @@
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@storybook/theming": "^6.5.15",
-    "jest-environment-jsdom": "^29.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/babel__core": "^7.1.20",
     "@types/jest": "^29.4.0",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-table": "^7.7.14",
     "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^17.0.18",
+    "@types/react-table": "^7.7.14",
     "@types/react-test-renderer": "^17.0.2",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -95,6 +95,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "react": "^17.0.2",
