--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
     "compile": "tsc -b",
     "start": "bit compile && bit start",
     "serve": "bit install && bit compile && bit start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --docs -o docs",
+    "build-storybook": "storybook build",
     "build": "bit build",
     "test": "jest",
     "test:ci": "jest --silent --ci",
     "test:watch": "jest --watch",
-    "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
+    "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\"",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-table": "^8.7.6",
-    "react-datepicker": "^4.8.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
-    "react-popper": "^2.3.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "react-popper": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -51,26 +51,23 @@
     "@babel/preset-typescript": "^7.18.6",
     "@carlsberg/eslint-config-carlsberg": "^0.3.0",
     "@carlsberg/prettier-config": "^0.0.1",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@storybook/theming": "^6.5.15",
-    "jest-environment-jsdom": "^29.3.1",
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/react": "^7.0.22",
+    "@storybook/react-webpack5": "^7.0.22",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/babel__core": "^7.1.20",
     "@types/jest": "^29.4.0",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-table": "^7.7.14",
     "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^17.0.18",
+    "@types/react-table": "^7.7.14",
     "@types/react-test-renderer": "^17.0.2",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -91,15 +88,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-testing-library": "^5.10.2",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
+    "storybook": "^7.0.22",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
     "ts-jest": "^29.0.5",
@@ -138,5 +138,10 @@
       }
     }
   },
-  "prettier": "@carlsberg/prettier-config"
+  "prettier": "@carlsberg/prettier-config",
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
