--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-docs": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-storysource": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
     "@storybook/addons": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
