--- a/package.json
+++ b/package.json
@@ -126,7 +126,8 @@
     "react": "<18.0.0",
     "react-dom": "<18.0.0",
     "@types/react": "<18.0.0",
-    "@types/react-dom": "<18.0.0"
+    "@types/react-dom": "<18.0.0",
+    "semver": "^7.5.2"
   },
   "bit": {
     "resolveModules": {
