--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -101,7 +101,7 @@
       "teambit.dependencies/dependency-resolver": {
         "policy": {
           "dependencies": {
-            "@splidejs/react-splide": "^0.7.12"
+            "@splidejs/splide": "^4.1.4"
           }
         }
       }
