feat(carousel): [DSM-621] Carousel component (#662)
* feat(DSM-621): component files

* feat(DSM-621):  install splidejs

* feat(DSM-621):  types, stories and component

* feat(DSM-621):  stories of component

* feat(DSM-621):  stories and types

* feat(DSM-621): carousel with styles

* feat(DSM-621): carousel stories

* feat(DSM-621): carousel types

* feat(DSM-621): carousel styles upd

* feat(DSM-621): carousel component

* feat(DSM-621): upd carousel stories

* feat(DSM-621): draft of test cases

* feat: remove autoHeight prop

Co-authored-by: tfmteixeira <ptteitia@carlsberggroup.com>

* feat: improve Types
Co-authored-by: tfmteixeira <ptteitia@carlsberggroup.com>

* feat: rename props & add perPage max validation

* feat: remove props and added others

* feat: upd types

* feat: improve stories with variants

* feat: upt stories

* feat: add theme context

* feat: add test cases

* feat(DSM-621): remove commented line

* feat(DSM-621): mock css import

* feat(DSM-621): add Carousel to bitmap file

* feat(DSM-621): add CarouselItemProps to index file - review

* feat(DSM-621): add CarouselItemProps to index file - review

Co-authored-by: Sergio Vanacloig <58294069+SergioVanacloigCarlsberg@users.noreply.github.com>
Signed-off-by: Vitor Martins  <ptmatvit@carlsberggroup.com>

* feat(DSM-621): sizes on styled file - review

Co-authored-by: Sergio Vanacloig <58294069+SergioVanacloigCarlsberg@users.noreply.github.com>
Signed-off-by: Vitor Martins  <ptmatvit@carlsberggroup.com>

* feat(DSM-621): remove comments from review

* feat(DSM-621): upd prop nam, paddingX - review

* fix(DSM-621): typo on description - review

* fix(DSM-621): stories importPath - review

Co-authored-by: Samuel SIlva <samuelsilvawb@gmail.com>
Signed-off-by: Vitor Martins  <ptmatvit@carlsberggroup.com>

* feat(DSM-621): improve stories component props - review

* feat(DSM-621): add ariaLabels prop - review

* feat(DSM-

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,7 +1,7 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-json
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
@@ -60,9 +60,7 @@
       "@types/react-dom": "^17.0.2"
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true
   },
   /**
@@ -76,10 +74,7 @@
      **/
     "*": {
       "teambit.component/dev-files": {
-        "devFilePatterns": [
-          "**/*.stories.+(js|ts|jsx|tsx)",
-          "**/*.story.+(js|ts|jsx|tsx)"
-        ]
+        "devFilePatterns": ["**/*.stories.+(js|ts|jsx|tsx)", "**/*.story.+(js|ts|jsx|tsx)"]
       },
       "teambit.react/react": {}
     },
@@ -98,6 +93,15 @@
         "policy": {
           "dependencies": {
             "react-datepicker": "^4.7.0"
+          }
+        }
+      }
+    },
+    "{organisms/carousel}": {
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "dependencies": {
+            "@splidejs/splide": "^4.1.4"
           }
         }
       }
