--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "test": "jest",
     "test:ci": "jest --silent --ci",
     "test:watch": "jest --watch",
-    "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
+    "format": "prettier --write . --loglevel error",
+    "check-lint": "eslint \"malty/**/*.{js,ts,tsx}\" --max-warnings=14",
+    "lint": "yarn check-lint --fix",
+    "check-types": "tsc --noemit",
+    "check-format": "prettier --check ."
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
