chore(dependabot): [DSM-750] Add commit message configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,6 @@ updates:
     target-branch: 'main'
     ignore:
       - dependency-name: '@storybook/*'
+    commit-message:
+      prefix: 'chore'
+      include: 'scope'
