--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Run git diff
+        run: |
+          git --no-pager diff
+        shell: bash
+
       - name: Install Bit CLI
         run: |
           npm i -g @teambit/bvm
@@ -28,10 +33,20 @@ jobs:
         env:
           BIT_VERSION: ${{ secrets.BIT_VERSION }}
 
+      - name: Run git diff
+        run: |
+          git --no-pager diff
+        shell: bash
+
       - name: Add bvm bin folder to path
         run: |
           echo "$HOME/bin" >> $GITHUB_PATH
           echo "PATH=$HOME/bin:$PATH" >> $GITHUB_ENV
+
+      - name: Run git diff
+        run: |
+          git --no-pager diff
+        shell: bash
 
       - name: Set up bit config
         run: |
@@ -47,6 +62,11 @@ jobs:
         env:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
+      - name: Run git diff
+        run: |
+          git --no-pager diff
+        shell: bash
+
       - name: Bit Deps Install & Compile
         run: |
           export PATH=${{ env.PATH }}
@@ -56,9 +76,19 @@ jobs:
           bit compile
         shell: bash
 
+      - name: Run git diff
+        run: |
+          git --no-pager diff
+        shell: bash
+
       - name: Run Check Lint
         run: |
           yarn check-lint
+        shell: bash
+
+      - name: Run git diff
+        run: |
+          git --no-pager diff
         shell: bash
 
       - name: Run Check Types
@@ -66,9 +96,9 @@ jobs:
           yarn check-types
         shell: bash
 
-      - name: RUn git diff
+      - name: Run git diff
         run: |
-          git diff --exit-code
+          git --no-pager diff
         shell: bash
 
       - name: Run Check Format
