--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,4 +1,5 @@
 /**
+ * THIS IS A TEST COMMENT
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-json
  **/ {
