--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,26 @@ jobs:
           bit compile
         shell: bash
 
+      - name: Restore workspace.jsonc changes
+        run: |
+          git restore workspace.jsonc
+        shell: bash
+
+      - name: Run Check Lint
+        run: |
+          yarn check-lint
+        shell: bash
+
+      - name: Run Check Types
+        run: |
+          yarn check-types
+        shell: bash
+
+      - name: Run Check Format
+        run: |
+          yarn check-format
+        shell: bash
+
       - name: Run Unit Tests
         run: |
           yarn test:ci
