--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
-      - name: Git log
+      - name: Git diff
         run: git --no-pager diff
 
       - name: Bit Deps Install & Compile
@@ -59,7 +59,7 @@ jobs:
           bit compile
         shell: bash
 
-      - name: Git log
+      - name: Git diff
         run: git --no-pager diff
 
       - name: Restore workspace.jsonc changes
@@ -67,7 +67,7 @@ jobs:
           git restore workspace.jsonc
         shell: bash
 
-      - name: Git log
+      - name: Git diff
         run: git --no-pager diff
 
       - name: Run Check Lint
@@ -75,7 +75,7 @@ jobs:
           yarn check-lint
         shell: bash
 
-      - name: Git log
+      - name: Git diff
         run: git --no-pager diff
 
       - name: Run Check Types
