Add git diff between check types and check format

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,6 +83,9 @@ jobs:
           yarn check-types
         shell: bash
 
+      - name: Git diff
+        run: git --no-pager diff
+
       - name: Run Check Format
         run: |
           yarn check-format
