Remove bit install add import and compile

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,8 @@ jobs:
           export PATH=${{ env.PATH }}
           yarn cache clean --force
           bit clear-cache
-          bit install
+          bit import
+          bit compile
         shell: bash
 
       - name: Format workspace.jsonc
