--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,8 +52,8 @@ jobs:
           export PATH=${{ env.PATH }}
           yarn cache clean --force
           bit clear-cache
-          bit import
-          bit compile
+          bit checkout head
+          bit install
         shell: bash
 
       - name: Format workspace.jsonc
