Add bit import --merge

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,8 +52,8 @@ jobs:
           export PATH=${{ env.PATH }}
           yarn cache clean --force
           bit clear-cache
-          bit checkout head
-          bit install
+          bit import --merge ours
+          bit install --skip-import
         shell: bash
 
       - name: Format workspace.jsonc
