--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
     "@types/react": "<18.0.0",
     "@types/react-dom": "<18.0.0",
     "semver": "^7.5.2",
-    "@adobe/css-tools": "4.3.1"
+    "@adobe/css-tools": "4.3.1",
+    "postcss": "8.4.31"
   },
   "bit": {
     "resolveModules": {
