ci: add codecov tests coverage

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -11,6 +11,7 @@ jobs:
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
       BIT_VERSION: ${{ secrets.BIT_VERSION }}
+      codecov-token: ${{ secrets.CODECOV_TOKEN }}
     steps:
       - id: token
         name: Token
