--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o docs",
     "build": "bit build",
-    "test": "jest",
-    "test:ci": "jest --silent --ci",
+    "test": "jest --coverage",
+    "test:ci": "jest --silent --ci --coverage",
     "test:watch": "jest --watch",
     "format": "prettier --write . --loglevel error",
     "check-lint": "eslint \"malty/**/*.{js,ts,tsx}\" --max-warnings=9",
