--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,6 @@ jobs:
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
       BIT_VERSION: ${{ secrets.BIT_VERSION }}
-      codecov-token: ${{ secrets.CODECOV_TOKEN }}
     steps:
       - uses: actions/checkout@v3
 
@@ -82,3 +81,8 @@ jobs:
         run: |
           yarn test:ci
         shell: bash
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v4-beta
+        env:
+          CODECOV_TOKEN: ${{ secrets.codecov-token }}
