ci: [DSM-969] add codecov test coverage (#850)
* ci: add codecov tests coverage

* ci: add codecov manually token

* Use {{ secrets.CODECOV_TOKEN }} instead

---------

Co-authored-by: Sergio Vanacloig <sergiovanacloig97@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,3 +81,8 @@ jobs:
         run: |
           yarn test:ci
         shell: bash
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v4-beta
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
