Revert "chore: disable check types momentarily"
This reverts commit 280247be807db9fb76fd5a2b09178fb9af6ac1b8.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,10 +67,10 @@ jobs:
           yarn check-lint
         shell: bash
 
-      # - name: Run Check Types
-      #   run: |
-      #     yarn check-types
-      #   shell: bash
+      - name: Run Check Types
+        run: |
+          yarn check-types
+        shell: bash
 
       - name: Run Check Format
         run: |
