chore: remove unnecessary config on workspace

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -76,10 +76,7 @@
       "teambit.component/dev-files": {
         "devFilePatterns": ["**/*.stories.+(js|ts|jsx|tsx)", "**/*.story.+(js|ts|jsx|tsx)", "**/AllIconsMap.tsx"]
       },
-      "teambit.react/react": {},
-      "teambit.dependencies/dependency-resolver": {
-        "policy": {}
-      }
+      "teambit.react/react": {}
     }
   }
 }
