wip: trying to create aliased paths for cypress

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,21 @@
       "rules": {
         "no-console": "off"
       }
+    },
+    {
+      "files": ["./cypress/**/*.ts"],
+      "rules": {
+        "jest/expect-expect": "off",
+        "import/extensions": "off"
+      },
+      "settings": {
+        "import/resolver": {
+          "typescript": "./cypress/tsconfig.json",
+          "node": {
+            "extensions": [".ts", ".tsx", ".js", ".jsx"]
+          }
+        }
+      }
     }
   ]
 }
