ci: add repository dispatch

--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -6,6 +6,8 @@ on:
     types:
       - completed
   workflow_dispatch:
+  repository_dispatch:
+    types: [run_visual_testing]
 
 jobs:
   visual-testing-run:
